# nova-s2s

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  START_HERE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: THIRD_PARTY.md  google_workspace.md  milestones.md  pipeline.md  setup.md  testing.md
eval/: __init__.py  run_corpus.py  scorers.py
eval/fixtures/: s2s_turns.jsonl
eval/tests/: conftest.py  test_fixtures_load.py  test_scorers.py
nova/: config.audio8.yaml  config.thor.yaml  config.yaml
nova/audio/: sentencer.py  streaming.py
nova/harness/: jobs.py
nova/launch/: llama_supervisor.py  models.yaml  prewarm.py
nova/server/: driveauth_bridge.py  routing.py  s2s_metrics.py  sensors.py  session_state.py  tool_agent.py  tool_service.py
nova/server/static/: index.html
nova/tools/: _env.py  agents.py  base.py  memory.py  payment.py  research.py  router.py  stubs.py  vehicle.py  weather.py  websearch.py
nova/tools/mcp/: __init__.py  calendar.py  client.py  drive.py  gmail.py  oauth.py  runtime.py
prompts/: soul.md  tool_router.md
scripts/: _gen_fixture_wav.py  demo_e2e.py  engine_smoke_test.py  enroll_driveauth_pin.py  google_mcp_auth.py  kokoro_probe.py  latency_probe.py  prefill_probe.py  probe_driveauth.py  run_demo.py  run_tests.sh  s2s_latency_graph.py  s2s_smoke.py  serve_llm.py  tts_corr.py  tts_smoke_test.py
tests/harness/: test_jobs.py
tests/integration/: __init__.py  conftest.py  test_fake_dual_llm.py  test_recorded_replay.py
tests/launch/: test_llama_supervisor.py  test_prewarm.py
tests/scripts/: test_run_demo_stt_device.py
tests/server/: test_driveauth_bridge.py  test_route_endpoint.py  test_s2s_metrics.py  test_tool_agent.py  test_tool_service.py
tests/tools/: test_agents.py  test_external.py  test_gmail_drive.py  test_google_mcp_calendar.py  test_memory.py  test_payment.py  test_router.py  test_vehicle.py
(+2 files in other folders)
