[project]
name = "nova-s2s"
version = "0.1.0"
description = "Nova — cascaded on-device in-vehicle voice agent with a modular harness"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "pydantic",
    "pyyaml",
    "httpx",
    "python-dotenv",
    "psutil",
    "numpy<2.5",
    # "litert-lm>=0.13.1",
    # "ai-edge-litert>=2.1.6",
    "matplotlib>=3.11.0",
    "tokenizers",
    "soundfile>=0.14.0",
    "torch>=2.9,<2.10",
    "torchvision>=0.24,<0.25",
    "torchaudio>=2.9,<2.10",
    "torchcodec",
    "misaki[en]>=0.9.4",
    "kokoro>=0.9.4",
    "speech-to-speech",
    "driveauth-edge",
    "funasr>=1.1.6",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
speech-to-speech = { path = "cloned/speech-to-speech", editable = true }
driveauth-edge = { path = "Drive_auth_edge", editable = true }

[tool.uv]
environments = ["python_full_version >= '3.12' and sys_platform == 'linux'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nova"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "fast: deterministic unit/contract tests; no models, GPU, or network",
    "component: multi-module contracts (tool service, DriveAuth mock, routing)",
    "model: optional live llama-server / LFM replay; operator-run",
    "live: requires run_demo stack (WS + tools + STT/TTS); operator-run",
    "slow: real external API calls; skipped without the relevant key in the shell env",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
]
